--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SLIMER - Cyber Security & Social Engineering</title>
+  <title>PROVA - Cyber Security & Social Engineering</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>SLIMER</h1>
+      <h1>PROVA</h1>
       <nav>
         <a href="#chi-siamo">Chi siamo</a>
         <a href="#servizi">Servizi</a>
@@ -22,7 +22,7 @@
   <section class="hero">
     <div class="container">
       <h2>La sicurezza inizia dalle persone</h2>
-      <p>SLIMER offre servizi avanzati di social engineering per testare e migliorare la sicurezza umana della tua azienda.</p>
+      <p>PROVA offre servizi avanzati di social engineering per testare e migliorare la sicurezza umana della tua azienda.</p>
     </div>
   </section>
 
@@ -56,14 +56,14 @@
   <section id="contatti">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Email: info@slimer.it</p>
+      <p>Email: info@PROVA.it</p>
       <p>Telefono: +39 0123 456789</p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 SLIMER - Tutti i diritti riservati</p>
+      <p>&copy; 2025 PROVA - Tutti i diritti riservati</p>
     </div>
   </footer>
 </body>
