--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section id="chi-siamo">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. SLIMER aiuta le aziende a identificare e colmare le falle più difficili da gestire: quelle legate all'ingegneria sociale.</p>
+      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. PROVA aiuta le aziende a identificare e colmare le falle più difficili da gestire: quelle legate all'ingegneria sociale.</p>
     </div>
   </section>
 
@@ -56,7 +56,7 @@
   <section id="contatti">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Email: info@PROVA.it</p>
+      <p>Email: info@prova.it</p>
       <p>Telefono: +39 0123 456789</p>
     </div>
   </section>
