--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PROVA - Cyber Security & Social Engineering</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <div class="container">
       <h1>PROVA</h1>
       <nav>
-        <a href="#chi-siamo">Chi siamo</a>
-        <a href="#servizi">Servizi</a>
-        <a href="#notizie">Notizie</a>
-        <a href="#contatti">Contatti</a>
+        <ul>
+          <li><a href="#chi-siamo">Chi siamo</a></li>
+          <li><a href="#servizi">Servizi</a></li>
+          <li><a href="#notizie">Notizie</a></li>
+          <li><a href="#contatti">Contatti</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -22,42 +25,43 @@
   <section class="hero">
     <div class="container">
       <h2>La sicurezza inizia dalle persone</h2>
-      <p>PROVA offre servizi avanzati di social engineering per testare e migliorare la sicurezza umana della tua azienda.</p>
+      <p>Offriamo servizi avanzati di social engineering per rafforzare la sicurezza umana della tua azienda.</p>
+      <a href="#servizi" class="btn">Scopri di più</a>
     </div>
   </section>
 
-  <section id="chi-siamo">
+  <section id="chi-siamo" class="section">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. PROVA aiuta le aziende a identificare e colmare le falle più difficili da gestire: quelle legate all'ingegneria sociale.</p>
+      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. Aiutiamo le aziende a colmare le vulnerabilità più critiche: quelle legate all'ingegneria sociale.</p>
     </div>
   </section>
 
-  <section id="servizi">
+  <section id="servizi" class="section dark">
     <div class="container">
-      <h2>Servizi di Social Engineering</h2>
-      <ul>
-        <li><strong>Phishing simulato:</strong> test realistici via email per valutare la consapevolezza dei dipendenti.</li>
-        <li><strong>Vishing:</strong> tentativi telefonici controllati per testare la sicurezza delle informazioni vocali.</li>
-        <li><strong>Pretexting:</strong> simulazioni con finti ruoli per ottenere accessi non autorizzati.</li>
-        <li><strong>Physical intrusion test:</strong> test di accesso fisico alle strutture aziendali.</li>
-        <li><strong>Formazione:</strong> training personalizzati per aumentare la resilienza al social engineering.</li>
+      <h2>I nostri servizi</h2>
+      <ul class="services">
+        <li><strong>Phishing simulato:</strong> valutazione della consapevolezza tramite email mirate.</li>
+        <li><strong>Vishing:</strong> test telefonici per misurare la sicurezza vocale.</li>
+        <li><strong>Pretexting:</strong> simulazioni basate su ruoli falsi per accedere a dati sensibili.</li>
+        <li><strong>Physical intrusion:</strong> test di accesso fisico alle strutture.</li>
+        <li><strong>Formazione:</strong> workshop e corsi su misura per i tuoi dipendenti.</li>
       </ul>
     </div>
   </section>
 
-  <section id="notizie">
+  <section id="notizie" class="section">
     <div class="container">
-      <h2>Notizie</h2>
-      <p>Segui il nostro <a href="https://www.linkedin.com" target="_blank">canale LinkedIn</a> per restare aggiornato sulle ultime novità in ambito social engineering.</p>
+      <h2>Ultime notizie</h2>
+      <p>Seguici su <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a> per aggiornamenti e approfondimenti sul social engineering.</p>
     </div>
   </section>
 
-  <section id="contatti">
+  <section id="contatti" class="section dark">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Email: info@prova.it</p>
-      <p>Telefono: +39 0123 456789</p>
+      <p>Email: <a href="mailto:info@prova.it">info@prova.it</a></p>
+      <p>Telefono: <a href="tel:+390123456789">+39 0123 456789</a></p>
     </div>
   </section>
 
