--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PROVA - Cyber Security & Social Engineering</title>
+  <title>HUMANSEC - Sicurezza Umana Aziendale</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>PROVA</h1>
+      <div class="logo">HUMANSEC</div>
       <nav>
         <ul>
-          <li><a href="#chi-siamo">Chi siamo</a></li>
-          <li><a href="#servizi">Servizi</a></li>
-          <li><a href="#notizie">Notizie</a></li>
+          <li><a href="#chi-siamo">Chi Siamo</a></li>
+          <li><a href="#soluzioni">Soluzioni</a></li>
+          <li><a href="#risorse">Risorse</a></li>
           <li><a href="#contatti">Contatti</a></li>
         </ul>
       </nav>
@@ -24,50 +24,62 @@
 
   <section class="hero">
     <div class="container">
-      <h2>La sicurezza inizia dalle persone</h2>
-      <p>Offriamo servizi avanzati di social engineering per rafforzare la sicurezza umana della tua azienda.</p>
-      <a href="#servizi" class="btn">Scopri di più</a>
+      <h1>Proteggiamo il tuo punto più vulnerabile: le persone</h1>
+      <p>HUMANSEC aiuta la tua azienda a prevenire gli errori umani attraverso formazione, test e strategie di social engineering etico.</p>
+      <a href="#contatti" class="btn">Richiedi una consulenza</a>
     </div>
   </section>
 
   <section id="chi-siamo" class="section">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. Aiutiamo le aziende a colmare le vulnerabilità più critiche: quelle legate all'ingegneria sociale.</p>
+      <p>Siamo un team di esperti in sicurezza umana. Il nostro obiettivo è aiutare le aziende a rafforzare la consapevolezza e la prontezza dei propri dipendenti contro le minacce di ingegneria sociale, come phishing, vishing e pretexting.</p>
     </div>
   </section>
 
-  <section id="servizi" class="section dark">
+  <section id="soluzioni" class="section light">
     <div class="container">
-      <h2>I nostri servizi</h2>
-      <ul class="services">
-        <li><strong>Phishing simulato:</strong> valutazione della consapevolezza tramite email mirate.</li>
-        <li><strong>Vishing:</strong> test telefonici per misurare la sicurezza vocale.</li>
-        <li><strong>Pretexting:</strong> simulazioni basate su ruoli falsi per accedere a dati sensibili.</li>
-        <li><strong>Physical intrusion:</strong> test di accesso fisico alle strutture.</li>
-        <li><strong>Formazione:</strong> workshop e corsi su misura per i tuoi dipendenti.</li>
-      </ul>
+      <h2>Le nostre soluzioni</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Simulazioni mirate</h3>
+          <p>Phishing e vishing etici per valutare il livello di rischio umano in azienda.</p>
+        </div>
+        <div class="card">
+          <h3>Formazione interattiva</h3>
+          <p>Sessioni dinamiche, quiz e roleplay per formare utenti consapevoli e reattivi.</p>
+        </div>
+        <div class="card">
+          <h3>Audit del fattore umano</h3>
+          <p>Analisi personalizzate per mappare le vulnerabilità comportamentali.</p>
+        </div>
+        <div class="card">
+          <h3>Cultura della sicurezza</h3>
+          <p>Programmi a lungo termine per creare ambienti resilienti agli attacchi sociali.</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <section id="notizie" class="section">
+  <section id="risorse" class="section">
     <div class="container">
-      <h2>Ultime notizie</h2>
-      <p>Seguici su <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a> per aggiornamenti e approfondimenti sul social engineering.</p>
+      <h2>Risorse & Notizie</h2>
+      <p>Segui il nostro <a href="https://www.linkedin.com" target="_blank">canale LinkedIn</a> per aggiornamenti, casi studio e consigli pratici sulla sicurezza umana.</p>
     </div>
   </section>
 
-  <section id="contatti" class="section dark">
+  <section id="contatti" class="section contact">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Email: <a href="mailto:info@prova.it">info@prova.it</a></p>
-      <p>Telefono: <a href="tel:+390123456789">+39 0123 456789</a></p>
+      <p>Vuoi sapere quanto è esposta la tua azienda al fattore umano?</p>
+      <p>Email: <a href="mailto:info@humansec.it">info@humansec.it</a></p>
+      <p>Tel: <a href="tel:+390123456789">+39 0123 456789</a></p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 PROVA - Tutti i diritti riservati</p>
+      <p>&copy; 2025 HUMANSEC - Prevenzione, Formazione, Sicurezza Umana</p>
     </div>
   </footer>
 </body>
