--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li><a href="#chi-siamo">Chi Siamo</a></li>
-          <li><a href="#soluzioni">Soluzioni</a></li>
+          <li><a href="#servizi">Servizi</a></li>
           <li><a href="#risorse">Risorse</a></li>
           <li><a href="#contatti">Contatti</a></li>
         </ul>
@@ -24,38 +24,34 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Proteggiamo il tuo punto più vulnerabile: le persone</h1>
-      <p>HUMANSEC aiuta la tua azienda a prevenire gli errori umani attraverso formazione, test e strategie di social engineering etico.</p>
-      <a href="#contatti" class="btn">Richiedi una consulenza</a>
+      <h1>Preveniamo l’errore umano. Proteggiamo il tuo team.</h1>
+      <p>Servizi etici di social engineering per migliorare la consapevolezza, la sicurezza e la resilienza dei tuoi dipendenti.</p>
+      <a href="#servizi" class="btn">Esplora i servizi</a>
     </div>
   </section>
 
   <section id="chi-siamo" class="section">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>Siamo un team di esperti in sicurezza umana. Il nostro obiettivo è aiutare le aziende a rafforzare la consapevolezza e la prontezza dei propri dipendenti contro le minacce di ingegneria sociale, come phishing, vishing e pretexting.</p>
+      <p>HUMANSEC è un’iniziativa specializzata nella prevenzione delle minacce legate all’ingegneria sociale. Il nostro obiettivo è potenziare il primo livello di difesa della tua azienda: le persone.</p>
     </div>
   </section>
 
-  <section id="soluzioni" class="section light">
+  <section id="servizi" class="section light">
     <div class="container">
-      <h2>Le nostre soluzioni</h2>
+      <h2>I nostri servizi</h2>
       <div class="cards">
         <div class="card">
-          <h3>Simulazioni mirate</h3>
-          <p>Phishing e vishing etici per valutare il livello di rischio umano in azienda.</p>
+          <h3>Phishing simulato</h3>
+          <p>Email mirate per testare l’attenzione dei dipendenti e migliorare la risposta alle minacce reali.</p>
         </div>
         <div class="card">
           <h3>Formazione interattiva</h3>
-          <p>Sessioni dinamiche, quiz e roleplay per formare utenti consapevoli e reattivi.</p>
+          <p>Workshop dinamici e quiz per sviluppare una cultura della sicurezza consapevole e attiva.</p>
         </div>
         <div class="card">
-          <h3>Audit del fattore umano</h3>
-          <p>Analisi personalizzate per mappare le vulnerabilità comportamentali.</p>
-        </div>
-        <div class="card">
-          <h3>Cultura della sicurezza</h3>
-          <p>Programmi a lungo termine per creare ambienti resilienti agli attacchi sociali.</p>
+          <h3>Audit umano</h3>
+          <p>Analisi comportamentali per identificare rischi, abitudini pericolose e lacune nei processi interni.</p>
         </div>
       </div>
     </div>
@@ -63,23 +59,23 @@
 
   <section id="risorse" class="section">
     <div class="container">
-      <h2>Risorse & Notizie</h2>
-      <p>Segui il nostro <a href="https://www.linkedin.com" target="_blank">canale LinkedIn</a> per aggiornamenti, casi studio e consigli pratici sulla sicurezza umana.</p>
+      <h2>Risorse & Approfondimenti</h2>
+      <p>Scopri articoli, guide e casi studio sul nostro <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>. Impara a riconoscere le tecniche di manipolazione più comuni e come difendersi.</p>
     </div>
   </section>
 
   <section id="contatti" class="section contact">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Vuoi sapere quanto è esposta la tua azienda al fattore umano?</p>
       <p>Email: <a href="mailto:info@humansec.it">info@humansec.it</a></p>
-      <p>Tel: <a href="tel:+390123456789">+39 0123 456789</a></p>
+      <p>Telefono: <a href="tel:+390123456789">+39 0123 456789</a></p>
+      <p>Disponibili per demo, preventivi e consulenze su misura.</p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 HUMANSEC - Prevenzione, Formazione, Sicurezza Umana</p>
+      <p>&copy; 2025 HUMANSEC - Progetto dimostrativo</p>
     </div>
   </footer>
 </body>
