--- a/index.html
+++ b/index.html
@@ -3,79 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HUMANSEC - Sicurezza Umana Aziendale</title>
+  <title>PROVA - Cyber Security & Social Engineering</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <div class="container">
-      <div class="logo">HUMANSEC</div>
+      <h1>PROVA</h1>
       <nav>
-        <ul>
-          <li><a href="#chi-siamo">Chi Siamo</a></li>
-          <li><a href="#servizi">Servizi</a></li>
-          <li><a href="#risorse">Risorse</a></li>
-          <li><a href="#contatti">Contatti</a></li>
-        </ul>
+        <a href="#chi-siamo">Chi siamo</a>
+        <a href="#servizi">Servizi</a>
+        <a href="#blog">Blog</a>
+        <a href="#contatti">Contatti</a>
       </nav>
     </div>
   </header>
 
   <section class="hero">
     <div class="container">
-      <h1>Preveniamo l’errore umano. Proteggiamo il tuo team.</h1>
-      <p>Servizi etici di social engineering per migliorare la consapevolezza, la sicurezza e la resilienza dei tuoi dipendenti.</p>
-      <a href="#servizi" class="btn">Esplora i servizi</a>
+      <h2>La sicurezza inizia dalle persone</h2>
+      <p>PROVA offre servizi avanzati di social engineering per testare e migliorare la sicurezza umana della tua azienda.</p>
     </div>
   </section>
 
-  <section id="chi-siamo" class="section">
+  <section id="chi-siamo">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>HUMANSEC è un’iniziativa specializzata nella prevenzione delle minacce legate all’ingegneria sociale. Il nostro obiettivo è potenziare il primo livello di difesa della tua azienda: le persone.</p>
+      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. PROVA aiuta le aziende a identificare e colmare le falle piÃ¹ difficili da gestire: quelle legate all'ingegneria sociale.</p>
     </div>
   </section>
 
-  <section id="servizi" class="section light">
+  <section id="servizi">
     <div class="container">
-      <h2>I nostri servizi</h2>
-      <div class="cards">
-        <div class="card">
-          <h3>Phishing simulato</h3>
-          <p>Email mirate per testare l’attenzione dei dipendenti e migliorare la risposta alle minacce reali.</p>
-        </div>
-        <div class="card">
-          <h3>Formazione interattiva</h3>
-          <p>Workshop dinamici e quiz per sviluppare una cultura della sicurezza consapevole e attiva.</p>
-        </div>
-        <div class="card">
-          <h3>Audit umano</h3>
-          <p>Analisi comportamentali per identificare rischi, abitudini pericolose e lacune nei processi interni.</p>
-        </div>
-      </div>
+      <h2>Servizi di Social Engineering</h2>
+      <ul>
+        <li><strong>Phishing simulato:</strong> test realistici via email per valutare la consapevolezza dei dipendenti.</li>
+        <li><strong>Vishing:</strong> tentativi telefonici controllati per testare la sicurezza delle informazioni vocali.</li>
+        <li><strong>Pretexting:</strong> simulazioni con finti ruoli per ottenere accessi non autorizzati.</li>
+        <li><strong>Physical intrusion test:</strong> test di accesso fisico alle strutture aziendali.</li>
+        <li><strong>Formazione:</strong> training personalizzati per aumentare la resilienza al social engineering.</li>
+      </ul>
     </div>
   </section>
 
-  <section id="risorse" class="section">
+  <section id="blog">
     <div class="container">
-      <h2>Risorse & Approfondimenti</h2>
-      <p>Scopri articoli, guide e casi studio sul nostro <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>. Impara a riconoscere le tecniche di manipolazione più comuni e come difendersi.</p>
+      <h2>Blog & Notizie</h2>
+
+      <article>
+        <h3>Come proteggere la tua azienda dal phishing</h3>
+        <p>Abbiamo pubblicato su LinkedIn una guida pratica per riconoscere e prevenire gli attacchi phishing piÃ¹ comuni.</p>
+        <p><a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a></p>
+      </article>
+
+      <article>
+        <h3>Simulazioni reali: i risultati sorprendenti</h3>
+        <p>Scopri come una simulazione di social engineering ha aiutato un nostro cliente a scoprire vulnerabilitÃ  umane inattese.</p>
+        <p><a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a></p>
+      </article>
+
     </div>
   </section>
 
-  <section id="contatti" class="section contact">
+  <section id="contatti">
     <div class="container">
       <h2>Contattaci</h2>
-      <p>Email: <a href="mailto:info@humansec.it">info@humansec.it</a></p>
-      <p>Telefono: <a href="tel:+390123456789">+39 0123 456789</a></p>
-      <p>Disponibili per demo, preventivi e consulenze su misura.</p>
+      <p>Email: info@prova.it</p>
+      <p>Telefono: +39 0123 456789</p>
     </div>
   </section>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 HUMANSEC - Progetto dimostrativo</p>
+      <p>&copy; 2025 PROVA - Tutti i diritti riservati</p>
     </div>
   </footer>
 </body>
