--- a/index.html
+++ b/index.html
@@ -3,79 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PROVA - Cyber Security & Social Engineering</title>
+  <title>PROVA - Cyber Security e Social Engineering</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="container">
-      <h1>PROVA</h1>
-      <nav>
-        <a href="#chi-siamo">Chi siamo</a>
-        <a href="#servizi">Servizi</a>
-        <a href="#blog">Blog</a>
-        <a href="#contatti">Contatti</a>
+      <h1 class="logo">PROVA</h1>
+      <nav class="nav">
+        <a href="#about">Chi siamo</a>
+        <a href="#services">Servizi</a>
+        <a href="#blog">Notizie</a>
+        <a href="#contact">Contatti</a>
       </nav>
     </div>
   </header>
 
   <section class="hero">
     <div class="container">
-      <h2>La sicurezza inizia dalle persone</h2>
-      <p>PROVA offre servizi avanzati di social engineering per testare e migliorare la sicurezza umana della tua azienda.</p>
+      <h2>Proteggi la tua azienda dalle minacce umane</h2>
+      <p>Siamo esperti in social engineering e cyber security. Aiutiamo le aziende a prevenire attacchi tramite simulazioni reali e formazione avanzata.</p>
     </div>
   </section>
 
-  <section id="chi-siamo">
+  <section id="about" class="section">
     <div class="container">
       <h2>Chi siamo</h2>
-      <p>Siamo specialisti in sicurezza informatica focalizzati sul comportamento umano. PROVA aiuta le aziende a identificare e colmare le falle piÃ¹ difficili da gestire: quelle legate all'ingegneria sociale.</p>
+      <p>PROVA è una realtà specializzata nella sicurezza informatica con un focus sulle tecniche di social engineering. Analizziamo i comportamenti umani per identificare i punti deboli che possono compromettere la sicurezza aziendale.</p>
     </div>
   </section>
 
-  <section id="servizi">
+  <section id="services" class="section dark">
     <div class="container">
-      <h2>Servizi di Social Engineering</h2>
+      <h2>Servizi</h2>
       <ul>
-        <li><strong>Phishing simulato:</strong> test realistici via email per valutare la consapevolezza dei dipendenti.</li>
-        <li><strong>Vishing:</strong> tentativi telefonici controllati per testare la sicurezza delle informazioni vocali.</li>
-        <li><strong>Pretexting:</strong> simulazioni con finti ruoli per ottenere accessi non autorizzati.</li>
-        <li><strong>Physical intrusion test:</strong> test di accesso fisico alle strutture aziendali.</li>
-        <li><strong>Formazione:</strong> training personalizzati per aumentare la resilienza al social engineering.</li>
+        <li><strong>Phishing simulato:</strong> test mirati via email per valutare la vulnerabilità degli utenti.</li>
+        <li><strong>Vishing:</strong> attacchi telefonici controllati per testare l'esposizione alle minacce vocali.</li>
+        <li><strong>Pretexting:</strong> scenari falsi creati per ottenere accessi sensibili.</li>
+        <li><strong>Intrusione fisica:</strong> test onsite per accedere a uffici e infrastrutture.</li>
+        <li><strong>Formazione e awareness:</strong> workshop e simulazioni per aumentare la consapevolezza dei dipendenti.</li>
       </ul>
     </div>
   </section>
 
-  <section id="blog">
+  <section id="blog" class="section">
     <div class="container">
       <h2>Blog & Notizie</h2>
-
       <article>
-        <h3>Come proteggere la tua azienda dal phishing</h3>
-        <p>Abbiamo pubblicato su LinkedIn una guida pratica per riconoscere e prevenire gli attacchi phishing piÃ¹ comuni.</p>
-        <p><a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a></p>
+        <h3>Analisi degli attacchi phishing nel 2025</h3>
+        <p>Uno sguardo approfondito alle tecniche più utilizzate dai cybercriminali per colpire aziende tramite email fraudolente.</p>
+        <a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a>
       </article>
-
       <article>
-        <h3>Simulazioni reali: i risultati sorprendenti</h3>
-        <p>Scopri come una simulazione di social engineering ha aiutato un nostro cliente a scoprire vulnerabilitÃ  umane inattese.</p>
-        <p><a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a></p>
+        <h3>Il ruolo della psicologia nella sicurezza informatica</h3>
+        <p>Come il comportamento umano può rappresentare la prima linea di difesa o la vulnerabilità maggiore in azienda.</p>
+        <a href="https://www.linkedin.com" target="_blank">Scopri di più</a>
       </article>
-
     </div>
   </section>
 
-  <section id="contatti">
+  <section id="contact" class="section dark">
     <div class="container">
-      <h2>Contattaci</h2>
+      <h2>Contatti</h2>
       <p>Email: info@prova.it</p>
       <p>Telefono: +39 0123 456789</p>
     </div>
   </section>
 
-  <footer>
+  <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 PROVA - Tutti i diritti riservati</p>
+      <p>&copy; 2025 PROVA. Tutti i diritti riservati.</p>
     </div>
   </footer>
 </body>
