--- a/index.html
+++ b/index.html
@@ -3,77 +3,168 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PROVA - Cyber Security e Social Engineering</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>PROVA - Cyber Security & Social Engineering</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      background-color: #0a0f24;
+      color: #f0f2f5;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #0e1433;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 1.8rem;
+      font-weight: 800;
+    }
+
+    nav a {
+      margin-left: 20px;
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 60px 20px;
+      background: url('https://images.unsplash.com/photo-1556761175-4b46a572b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=1650&q=80') no-repeat center center/cover;
+      color: white;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: auto;
+    }
+
+    .section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #00bfff;
+    }
+
+    .section img {
+      width: 100%;
+      max-width: 700px;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+
+    .services ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .services li {
+      background-color: #161c3a;
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 8px;
+    }
+
+    .blog article {
+      background-color: #12192f;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #0e1433;
+      color: #888;
+    }
+
+    a.button {
+      display: inline-block;
+      background: #00bfff;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      margin-top: 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1 class="logo">PROVA</h1>
-      <nav class="nav">
-        <a href="#about">Chi siamo</a>
-        <a href="#services">Servizi</a>
-        <a href="#blog">Notizie</a>
-        <a href="#contact">Contatti</a>
-      </nav>
-    </div>
+  <header>
+    <h1>PROVA</h1>
+    <nav>
+      <a href="#about">Chi siamo</a>
+      <a href="#services">Servizi</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contatti</a>
+    </nav>
   </header>
 
   <section class="hero">
-    <div class="container">
-      <h2>Proteggi la tua azienda dalle minacce umane</h2>
-      <p>Siamo esperti in social engineering e cyber security. Aiutiamo le aziende a prevenire attacchi tramite simulazioni reali e formazione avanzata.</p>
-    </div>
+    <h2>Proteggi la tua azienda dalle minacce umane</h2>
+    <p>Esperti in social engineering e cyber security. Simulazioni, analisi, formazione. Difendi la tua azienda dai rischi umani.</p>
   </section>
 
   <section id="about" class="section">
-    <div class="container">
-      <h2>Chi siamo</h2>
-      <p>PROVA è una realtà specializzata nella sicurezza informatica con un focus sulle tecniche di social engineering. Analizziamo i comportamenti umani per identificare i punti deboli che possono compromettere la sicurezza aziendale.</p>
-    </div>
+    <h2>Chi siamo</h2>
+    <p>PROVA è un team specializzato in attacchi simulati, ingegneria sociale e valutazione della sicurezza comportamentale. Aiutiamo le aziende a proteggersi da phishing, truffe, manipolazioni e intrusioni sociali.</p>
+    <img src="https://images.unsplash.com/photo-1600267165652-39fba8162626?auto=format&fit=crop&w=1350&q=80" alt="Social Engineering Image">
   </section>
 
-  <section id="services" class="section dark">
-    <div class="container">
-      <h2>Servizi</h2>
-      <ul>
-        <li><strong>Phishing simulato:</strong> test mirati via email per valutare la vulnerabilità degli utenti.</li>
-        <li><strong>Vishing:</strong> attacchi telefonici controllati per testare l'esposizione alle minacce vocali.</li>
-        <li><strong>Pretexting:</strong> scenari falsi creati per ottenere accessi sensibili.</li>
-        <li><strong>Intrusione fisica:</strong> test onsite per accedere a uffici e infrastrutture.</li>
-        <li><strong>Formazione e awareness:</strong> workshop e simulazioni per aumentare la consapevolezza dei dipendenti.</li>
-      </ul>
-    </div>
+  <section id="services" class="section services">
+    <h2>Servizi di Social Engineering</h2>
+    <ul>
+      <li><strong>Phishing simulato:</strong> valutiamo la vulnerabilità dei dipendenti tramite email fasulle.</li>
+      <li><strong>Vishing (Voice Phishing):</strong> test tramite telefonate ingannevoli.</li>
+      <li><strong>Pretexting:</strong> creazione di scenari reali per ottenere dati sensibili.</li>
+      <li><strong>Accesso fisico simulato:</strong> test onsite di penetrazione fisica.</li>
+      <li><strong>Formazione del personale:</strong> training contro la manipolazione sociale.</li>
+    </ul>
   </section>
 
-  <section id="blog" class="section">
-    <div class="container">
-      <h2>Blog & Notizie</h2>
-      <article>
-        <h3>Analisi degli attacchi phishing nel 2025</h3>
-        <p>Uno sguardo approfondito alle tecniche più utilizzate dai cybercriminali per colpire aziende tramite email fraudolente.</p>
-        <a href="https://www.linkedin.com" target="_blank">Leggi su LinkedIn</a>
-      </article>
-      <article>
-        <h3>Il ruolo della psicologia nella sicurezza informatica</h3>
-        <p>Come il comportamento umano può rappresentare la prima linea di difesa o la vulnerabilità maggiore in azienda.</p>
-        <a href="https://www.linkedin.com" target="_blank">Scopri di più</a>
-      </article>
-    </div>
+  <section id="blog" class="section blog">
+    <h2>Notizie dal nostro team</h2>
+    <article>
+      <h3>🧠 Il lato umano della sicurezza informatica</h3>
+      <p>Perché la social engineering è il punto debole di ogni infrastruttura. Analisi dei casi più comuni.</p>
+      <a href="https://www.linkedin.com" target="_blank" class="button">Leggi su LinkedIn</a>
+    </article>
+    <article>
+      <h3>📬 Phishing: come riconoscere le mail truffa</h3>
+      <p>Tecniche di attacco in crescita nel 2025 e consigli pratici per evitarle.</p>
+      <a href="https://www.linkedin.com" target="_blank" class="button">Scopri di più</a>
+    </article>
   </section>
 
-  <section id="contact" class="section dark">
-    <div class="container">
-      <h2>Contatti</h2>
-      <p>Email: info@prova.it</p>
-      <p>Telefono: +39 0123 456789</p>
-    </div>
+  <section id="contact" class="section">
+    <h2>Contattaci</h2>
+    <p>Email: info@prova.it</p>
+    <p>Telefono: +39 0123 456789</p>
   </section>
 
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2025 PROVA. Tutti i diritti riservati.</p>
-    </div>
+  <footer>
+    <p>&copy; 2025 PROVA. Tutti i diritti riservati.</p>
   </footer>
 </body>
 </html>
