--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
       <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
     </article>
     <article style="background:#12192f; padding:20px; border-radius:12px;">
-      <h3>📬 Phishing: riconoscere le email truffa</h3>
-      <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
+      <h3>⚠️ Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h3>
+      <p>ClickFix è una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nell’indurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows...</p>
+      <a href="githubnotiziaclicfix.html" style="color:#00bfff; font-weight: 700;">Leggi l'articolo completo</a>
     </article>
   </section>
 
