--- a/githubnotiziaclicfix.html
+++ b/githubnotiziaclicfix.html
@@ -3,76 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix - PROVA</title>
+  <title>Notizia ClickFix - PROVA</title>
   <style>
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: Arial, sans-serif;
       background-color: #0a0f24;
       color: #f0f2f5;
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
       line-height: 1.6;
     }
-    header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    header h1 {
+    h1 {
       color: #00bfff;
       font-weight: 900;
-      font-size: 1.8rem;
-    }
-    a.back-link {
-      display: inline-block;
+      font-size: 2.4rem;
       margin-bottom: 20px;
-      color: #00bfff;
-      text-decoration: none;
-      font-weight: 700;
-    }
-    a.back-link:hover {
-      text-decoration: underline;
     }
     h2 {
       color: #00bfff;
-      margin-top: 1.5em;
+      font-weight: 800;
+      margin-top: 40px;
+      margin-bottom: 15px;
+    }
+    p, li {
+      font-size: 1.1rem;
+      margin-bottom: 16px;
+      font-weight: 400;
     }
     ul {
       margin-left: 20px;
+      margin-bottom: 30px;
     }
     li {
-      margin-bottom: 10px;
+      margin-bottom: 12px;
     }
-    p {
-      margin-bottom: 15px;
+    .image-container {
+      text-align: center;
+      margin: 20px 0 40px;
     }
-    pre {
-      background:#111;
-      color:#0f0;
-      padding:10px;
-      border-radius:5px;
-      overflow-x:auto;
+    .image-container img {
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 8px 25px rgba(0, 191, 255, 0.3);
     }
   </style>
 </head>
 <body>
-
-<header>
   <h1>Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h1>
-</header>
-
-<a href="index.html" class="back-link">? Torna alla home</a>
-
-<article>
-  <p>ClickFix Ë una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nellíindurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows, tipicamente utilizzando scorciatoie con cui líutente meno esperto potrebbe avere poca dimestichezza.</p>
-
-  <p>Una campagna ClickFix inizia attirando la vittima su una pagina controllata dallíattore malevolo o inducendola ad aprire un documento inviato in allegato che conterranno il pretesto per spingere la vittima ad eseguire i comandi.</p>
-
+  
+  <p>ClickFix √® una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nell‚Äôindurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows, tipicamente utilizzando scorciatoie con cui l‚Äôutente meno esperto potrebbe avere poca dimestichezza.</p>
+  
+  <p>Una campagna ClickFix inizia attirando la vittima su una pagina controllata dall‚Äôattore malevolo o inducendola ad aprire un documento inviato in allegato che conterranno il pretesto per spingere la vittima ad eseguire i comandi.</p>
+  
   <p>Gli attaccanti utilizzano due principali pretesti:</p>
   <ul>
-    <li><strong>finti CAPTCHA</strong>: líutente sar‡ portato naturalmente a cliccare sul CAPTCHA che copier‡ a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.</li>
+    <li><strong>Finti CAPTCHA:</strong> l‚Äôutente sar√† portato naturalmente a cliccare sul CAPTCHA che copier√† a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.</li>
+  </ul>
 
-    <li><strong>finti messaggi di errore</strong>: le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice a insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
+  <div class="image-container">
+    <img src="imag.jpg" alt="Immagine relativa alla tattica ClickFix" />
+  </div>
+
+  <ul>
+    <li><strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
   </ul>
 
   <p>Le campagne fino ad ora osservate utilizzavano tre diverse locazioni in cui incollare ed eseguire il codice:</p>
@@ -82,31 +76,28 @@
     <li>Finestre di terminale, sia CMD che PowerShell, talvolta fatte avviare tramite la scorciatoia WIN+X</li>
   </ol>
 
-  <p>Per proteggere i propri dispositivi da questa tattica Ë opportuno adottare una serie di misure preventive atte a bloccare l'attacco, in particolar modo quando sono utilizzati da utenti meno esperti. Ecco alcune delle principali difese:</p>
-
+  <p>Per proteggere i propri dispositivi da questa tattica √® opportuno adottare una serie di misure preventive atte a bloccare l'attacco, in particolar modo quando sono utilizzati da utenti meno esperti. Ecco alcune delle principali difese:</p>
+  
   <ul>
-    <li><strong>Disabilitare il comando Esegui</strong>: aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\Explorer</code> un valore DWORD 32-bit con nome <code>NoRun</code> ed impostarlo ad 1. Questa modifica blocca le campagne che utilizzano la finestra di Esegui o la barra dellíEsplora Risorse.</li>
-
-    <li><strong>Disabilitare CMD e PowerShell per líutente</strong>: 
+    <li><strong>Disabilitare il comando Esegui:</strong> aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\Explorer</code> un valore DWORD 32-bit con nome ‚ÄúNoRun‚Äù ed impostarlo ad 1. Questa modifica blocca le campagne che utilizzano la finestra di Esegui o la barra dell‚ÄôEsplora Risorse.</li>
+    
+    <li><strong>Disabilitare CMD e PowerShell per l‚Äôutente:</strong>
       <ul>
-        <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows</code> un valore DWORD 32-bit con nome <code>DisableCMD</code> ed impostarlo ad 1.</li>
-        <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows\PowerShell</code> un valore DWORD 32-bit con nome <code>DisablePowerShell</code> ed impostarlo ad 1.</li>
+        <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows</code> un valore DWORD 32-bit con nome ‚ÄúDisableCMD‚Äù ed impostarlo ad 1.</li>
+        <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows\PowerShell</code> un valore DWORD 32-bit con nome ‚ÄúDisablePowerShell‚Äù ed impostarlo ad 1.</li>
       </ul>
-      Questa modifica impedisce líutilizzo sia del prompt dei comandi, sia della PowerShell, bloccando anche le campagne che inducono líutente ad aprire una finestra di terminale.
+      Questa modifica impedisce l‚Äôutilizzo sia del prompt dei comandi, sia della PowerShell, bloccando anche le campagne che inducono l‚Äôutente ad aprire una finestra di terminale.
     </li>
-
-    <li><strong>Disabilitare la Clipboard</strong>: creare uno script in PowerShell che venga eseguito in background ad ogni avvio con il seguente codice:
+    
+    <li><strong>Disabilitare la Clipboard:</strong> creare uno script in PowerShell che venga eseguito in background ad ogni avvio con il seguente codice:
       <pre>
 while($true){
-  Set-Clipboard -Value "La Clipboard Ë stata disabilitata su questo dispositivo"
+  Set-Clipboard -Value "La Clipboard √® stata disabilitata su questo dispositivo"
   sleep 100
 }
       </pre>
-      Questa modifica rimpiazza costantemente il valore della clipboard con il messaggio "La Clipboard Ë stata disabilitata su questo dispositivo", impedendo alle potenziali vittime di copiare ed incollare codice malevolo.
+      Questa modifica rimpiazza costantemente il valore della clipboard con il messaggio "La Clipboard √® stata disabilitata su questo dispositivo", impedendo alle potenziali vittime di copiare ed incollare codice malevolo.
     </li>
   </ul>
-
-</article>
-
 </body>
 </html>
