--- a/index.html
+++ b/index.html
@@ -44,19 +44,20 @@
       <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
     </article>
     <article>
-      <h3><a href="githubnotiziaclicfix.html">Leggi la nostra ultima notizia sulla tattica ClickFix</a></h3>
+      <h3>Ultima notizia</h3>
+      <p><a href="githubnotiziaclicfix.html">Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</a></p>
     </article>
   </section>
 
   <section id="contatti">
     <h2>Contattaci</h2>
-    <form>
+    <form action="mailto:info@prova.it" method="post" enctype="text/plain">
       <label for="nome">Nome</label><br />
-      <input type="text" id="nome" name="nome" /><br />
+      <input type="text" id="nome" name="nome" required /><br />
       <label for="email">Email</label><br />
-      <input type="email" id="email" name="email" /><br />
+      <input type="email" id="email" name="email" required /><br />
       <label for="messaggio">Messaggio</label><br />
-      <textarea id="messaggio" name="messaggio"></textarea><br />
+      <textarea id="messaggio" name="messaggio" required></textarea><br />
       <button type="submit">Invia messaggio</button>
     </form>
     <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
